Corrected small bug in REINIT_RISK_REGULAR and commented out Presenter